  b - fix server crash caused by gpu mode not being right after gpus=x:. TRQ-948.
      (backported from 4.0.3)
  e - add the mom config option exec_with_exec. When set to true, the pbs_mom will exec 
      the job script instead of piping it to stdin. This makes signal trapping easier 
      because the shell doesn't have to be configured to trap the signal as well.
     

2.5.11
  b - fix for writing too much data when job_script is saved to job log. (backported from 3.0.5)
  b - fix for where pbs_mom would not automatically set gpu mode. (backported from 3.0.5)
  b - fix for alligning qstat -r output when configured with -DTXT. (backported from 3.0.5)
  e - Change size of transfer block used on job rerun from 4k to 64k. (backported from 3.0.5)
  b - With nvidia gpus, TORQUE was losing the directive of what nodes it should
      run the job on from Moab. Corrected (backported from 3.0.5)
  e - add the $PBS_WALLTIME variable to jobs, thanks to a patch from Mark Roberts 
      (backported from 3.0.5)
  n - change moab_array_compatible server parameter so it defaults to true
      (backported from 3.0.5)
  b - fix so comma separated file list can be used with qsub -W stagein/stageout.
      Matches qsub documentation again. (backported from 4.0.1)
  e - change to allow pbs_mom to run if configured with --enable-nvidia-gpus but
      installed on a node without Nvidia gpus. (backported from 3.0.5)
  b - fix for where pbsnodes displays outdated gpu_status information.
      (backported from 3.0.5)
  b - Fixed a problem where starting pbs_mom with the default -p option would delete
      running jobs instead of trying to recover them if cpusets were enabled. TRQ-828
      Fixes Bugzilla 174.
  b - Added a check for a NULL job pointer in modify_job. This fixes TRQ-818
  b - fix problem with '+ and segfault when using multiple node gpu requests.
      (backported from 4.0.1)
  b - fix problem with mom segfault when using 8 or more gpus on mom node.